--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 
-script: cmake . && make && sonar-scanner
+script: configure
 
 matrix:
     include:
@@ -15,6 +15,6 @@ matrix:
                     - g++-7
             env:
                 - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-                
+
 before_install:
     - eval "${MATRIX_EVAL}"
